--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <body>
   <a href="https://github.com/HGU-Coding-Studio/2024-oss-assignment-2-hjkim1113.git">내 클래스룸 리포지토리</a>
   <a href="https://github.com/hjkim1113/22300228_hjk_OSS_2.git">내 깃허브 리포지토리</a>
-  <a href="https://resonant-gumption-e3c7bc.netlify.app/">내 사이트</a>
+  <a href="https://beamish-tiramisu-f9b18f.netlify.app/">내 사이트</a>
   <a href="./test/test.html">테스트</a>
   <br/>
+
+  <h1>Assignment</h1>
+  <ul>
+    <li>
+      <a href="https://resonant-gumption-e3c7bc.netlify.app/">Assignment1</a>
+    </li>
+  </ul>
+
 
   <h1>Assignment2</h1>
   <ul>
