--- a/Assignment2/lab1/form_nostyle.html
+++ b/Assignment2/lab1/form_nostyle.html
@@ -6,6 +6,199 @@
   <title>lab1</title>
 </head>
 <body>
-  
+
+  <div class="container">
+    <div class="top">
+      <img src="../../img/logo.png" alt="logo">
+    </div>
+
+    
+    <form onsubmit="submitf(event)"><!-- onkeydown -->
+      <div id="main">
+        <div id="ch">
+          <!-- 동그라미 체크 -->
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
+          <p>실명 인증된 아이디로 가입</p>
+        </div>
+        <div id="id_pw_em">
+
+          <div id="id" box="id">
+            <!-- 사람 모양 -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464l349.5 0c-8.9-63.3-63.3-112-129-112l-91.4 0c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304l91.4 0C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7L29.7 512C13.3 512 0 498.7 0 482.3z"/></svg>
+            <input id="id_input" type="text" placeholder="아이디" maxlength="20" onblur="check(this.value, this.id)">
+            <div class="id_naver">@naver.com</div>
+          </div>
+
+          <div id="psword" box="psword">
+            <!-- 자물쇠 -->
+            <svg id="lock" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z"/></svg>
+            <input id="psword_input" type="password" placeholder="비밀번호" maxlength="20" onblur="check(this.value, this.id)">
+            <!-- 눈 모양 -->
+            <svg onclick="showpw()" onmouseover="eye_hover()" onmouseout="eye_hover_out()" id="eye" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path id="eyepa" d="M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7L525.6 386.7c39.6-40.6 66.4-86.1 79.9-118.4c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C465.5 68.8 400.8 32 320 32c-68.2 0-125 26.3-169.3 60.8L38.8 5.1zM223.1 149.5C248.6 126.2 282.7 112 320 112c79.5 0 144 64.5 144 144c0 24.9-6.3 48.3-17.4 68.7L408 294.5c8.4-19.3 10.6-41.4 4.8-63.3c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3c0 10.2-2.4 19.8-6.6 28.3l-90.3-70.8zM373 389.9c-16.4 6.5-34.3 10.1-53 10.1c-79.5 0-144-64.5-144-144c0-6.9 .5-13.6 1.4-20.2L83.1 161.5C60.3 191.2 44 220.8 34.5 243.7c-3.3 7.9-3.3 16.7 0 24.6c14.9 35.7 46.2 87.7 93 131.1C174.5 443.2 239.2 480 320 480c47.8 0 89.9-12.9 126.2-32.5L373 389.9z"/></svg>
+          </div>
+
+          <div id="email" box="email">
+            <!-- 메일 모양 -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M64 112c-8.8 0-16 7.2-16 16l0 22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1l0-22.1c0-8.8-7.2-16-16-16L64 112zM48 212.2L48 384c0 8.8 7.2 16 16 16l384 0c8.8 0 16-7.2 16-16l0-171.8L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64l384 0c35.3 0 64 28.7 64 64l0 256c0 35.3-28.7 64-64 64L64 448c-35.3 0-64-28.7-64-64L0 128z"/></svg>
+            <input type="email" placeholder="[선택] 이메일주소 (비밀번호 찾기 등 본인 확인용)" maxlength="100">
+          </div>
+
+        </div>
+
+        <ul id="id_pw_em_ul" class="warning_ul">
+          <li id="id_li" class="warning">- 아이디: 필수 정보입니다.</li>
+          <li id="id_li2" class="warning">- 아이디: 5~20자의 영문 소문자, 숫자와 특수기호(_),(-)만 사용 가능합니다.</li>
+          <li id="psword_li" class="warning">- 비밀번호: 필수 정보입니다.</li>
+          <li id="psword_li2" class="warning">- 비밀번호: 8~16자의 영문 대/소문자, 숫자, 특수문자를 사용해 주세요.</li>
+        </ul>
+
+        <div id="name_born">
+
+          <div id="name" box="name">
+            <!-- 사람모양 -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464l349.5 0c-8.9-63.3-63.3-112-129-112l-91.4 0c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304l91.4 0C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7L29.7 512C13.3 512 0 498.7 0 482.3z"/></svg>
+            <input id="name_input" type="text" placeholder="이름" maxlength="40" onblur="check(this.value, this.id)">
+          </div>
+
+          <div id="born" box="born">
+            <!-- 달력 모양 -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40L64 64C28.7 64 0 92.7 0 128l0 16 0 48L0 448c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-256 0-48 0-16c0-35.3-28.7-64-64-64l-40 0 0-40c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40L152 64l0-40zM48 192l352 0 0 256c0 8.8-7.2 16-16 16L64 464c-8.8 0-16-7.2-16-16l0-256z"/></svg>
+            <div id="born_p">생년월일</div>
+            <input id="born_input" type="date" placeholder="생년월일 8자리" onblur="check(this.value, this.id)">
+          </div>
+
+          <div id="news" box="news">
+            <!-- 와이파이 모양 -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 64C0 46.3 14.3 32 32 32c229.8 0 416 186.2 416 416c0 17.7-14.3 32-32 32s-32-14.3-32-32C384 253.6 226.4 96 32 96C14.3 96 0 81.7 0 64zM0 416a64 64 0 1 1 128 0A64 64 0 1 1 0 416zM32 160c159.1 0 288 128.9 288 288c0 17.7-14.3 32-32 32s-32-14.3-32-32c0-123.7-100.3-224-224-224c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg>
+            <select name="sel" id="sel" onchange="alert(`${this.value}를 고르셨습니다.`);">
+              <option>통신사 선택</option>
+              <option value="SKT">SKT</option>
+              <option value="KT">KT</option>
+              <option value="LG U+">LG U+</option>
+              <option value="SKT 알뜰폰">SKT 알뜰폰</option>
+              <option value="KT 알뜰폰">KT 알뜰폰</option>
+              <option value="LG U+ 알뜰폰">LG U+ 알뜰폰</option>
+            </select>
+          </div>
+
+
+          <div id="rad" box="rad">
+            <ul id="gender">
+              <li id="rdl">
+                <input type="radio" id="gender_input1" name="identityGender" value="M" onclick="check(this.value, this.id)">
+                <label for="gender_input1">남자</label>
+              </li>
+              <li id="rdr">
+                <input type="radio" id="gender_input2" name="identityGender" value="F" onclick="check(this.value, this.id)">
+                <label for="gender_input2">여자</label>
+              </li>
+            </ul>
+            <ul id="foreigner">
+              <li id="rdl">
+                <input type="radio" id="foreigner1" name="foreigner" value="K" checked="">
+                <label for="foreigner1">내국인</label>
+              </li>
+              <li id="rdr">
+                <input type="radio" id="foreigner2" name="foreigner" value="F">
+                <label for="foreigner2">외국인</label>
+              </li>
+            </ul>
+          </div>
+
+          <div id="phone" box="phone">
+            <!-- 전화기 모양 -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
+            <input id="phone_input" type="tel" placeholder="휴대전화번호" maxlength="16" onblur="check(this.value, this.id)">
+          </div>
+
+        </div>
+
+        <ul id="name_born_ul" class="warning_ul">
+          <li id="name_li" class="warning">- 이름: 필수 정보입니다.</li>
+          <li id="born_li" class="warning">- 생년월일: 필수 정보입니다.</li>
+          <li id="born_li2" class="warning">- 생년월일: 생년월일은 8자리 숫자로 입력해 주세요.</li>
+          <li id="sel_li" class="warning">- 통신사: 이용하는 통신사를 선택해 주세요.</li>
+          <li id="gender_li" class="warning">- 성별: 성별을 선택해 주세요.</li>
+          <li id="phone_li" class="warning">- 휴대전화번호: 필수 정보입니다.</li>
+          <li id="phone_li2" class="warning">- 휴대전화번호: 휴대전화번호가 정확한지 확인해 주세요.</li>
+        </ul>
+
+        <div id="cert">
+          <div id="title" box="cert">
+            <input type="checkbox" id="cert_input" onclick="check(this.value, this.id)">
+            <label for="cert_input">
+              <!-- 동그라미 체크 -->
+              <svg id="chec" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
+              <em class="option">[필수]</em>
+              <span class="text">인증 약관 전체동의</span>
+            </label>
+            <!-- 화살표 모양 -->
+            <svg onclick="show()" id="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path id="arrow_down" d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+          </div>
+
+          <div id="detail">
+            <ul>
+              <li class="menuitem">
+                <input type="checkbox" id="agree_01" class="blind">
+                <label for="agree_01">
+                  <!-- 체크 모양 -->
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  <span>개인정보 이용</span>
+                </label>
+              </li>
+              <li class="menuitem">
+                <input type="checkbox" id="agree_02" class="blind">
+                <label for="agree_02">
+                  <!-- 체크 모양 -->
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  <span>고유식별정보 처리</span>
+                </label>
+              </li>
+              <li class="menuitem">
+                <input type="checkbox" id="agree_03" class="blind">
+                <label for="agree_03">
+                  <!-- 체크 모양 -->
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  <span>통신사 이용약관</span>
+                </label>
+              </li>
+              <li class="menuitem">
+                <input type="checkbox" id="agree_04" class="blind">
+                <label for="agree_04">
+                  <!-- 체크 모양 -->
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  <span>인증사 이용약관</span>
+                </label>
+              </li>
+              <li class="menuitem">
+                <input type="checkbox" id="agree_05" class="blind">
+                <label for="agree_05">
+                  <!-- 체크 모양 -->
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+                  <span>네이버 개인정보수집</span>
+                </label>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <ul id="cert_ul" class="warning_ul">
+          <li id="cert_li" class="warning">필수 약관에 모두 동의해 주세요</li>
+        </ul>
+
+        <div id="adder" box="adder">
+          <input type="textarea" placeholder="추가 사항 입력">
+        </div>
+
+      </div>
+
+      <button type="submit" id="fbtn" onmouseover="mouse_in()" onmouseout="mouse_out()">
+        인증요청
+        <span id="mouse_sub_in">제출하시겠습니까? (마우스를 올렸습니다)</span>
+        <span id="mouse_sub_out">(마우스의 범위가 벗어났습니다)</span>
+      </button>
+    </form>
+  </div>
+
 </body>
 </html>
