--- a/test/test.html
+++ b/test/test.html
@@ -4,19 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="main.js" defer></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Document</title>
 </head>
 <body>
 
-  <button class="b1">그냥 버튼</button>
+  <h1 id="name">Hello, world!</h1>
+  <div class="container" id="container">
+    <div class="row">
+      <div class="col">
+        <input type="text" placeholder="아이디" class="form-control">
+      </div>
+      <div class="col">
+        <input type="text" placeholder="비밀번호" class="form-control">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <input type="text" placeholder="이메일" class="form-control">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <input type="text" placeholder="닉네임" class="form-control">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <input type="text" placeholder="성별" class="form-control">
+      </div>
+    </div>
+  </div>
+
+  <h1>테이블</h1>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- <button class="b1">그냥 버튼</button>
   <div id="in" style="display: none;">그냥 버튼을 눌렀습니다</div><br>
 
   <input type="text" id="fnum"> +
   <input type="text" id="snum"> =
   <input type="text" id="reas">
   
-  <button class="b2">값 계산하기</button>
+  <button class="b2">값 계산하기</button> -->
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
