--- a/Assignment2_2/add.html
+++ b/Assignment2_2/add.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./my.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="./js/add.js"></script>
+  <script src="./js/add.js" defer></script>
   <title>add page</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -19,46 +19,60 @@
       .then(data => document.getElementById('header').innerHTML = data);
   </script>
   
-  <div id="container" class="d-flex justify-content-center">
-    <form action="#"> <!-- /index.html -->
-      <span class="fs-5 fw-bold pe-2">새 직원 정보 입력</span>
-      <div class="container" id="container">
-        <div class="row">
+  <div id="container" class="d-flex justify-content-center my-3 px-3">
+    <form action="/index.html" class="needs-validation">
+      <span class="fs-5 fw-bold">새 직원 정보 입력</span>
+      <div class="mt-3">
+        <div class="row mb-3">
           <div class="col">
             <input type="text" id="name_v" placeholder="이름" class="form-control">
+            <div class="invalid-feedback">2글자 이상 입력해 주세요</div>
+            <div class="valid-feedback">사용가능 합니다</div>
           </div>
+        </div>
+        <div class="row mb-3">
           <div class="col">
             <input type="text" id="email_v" placeholder="이메일" class="form-control">
+            <div class="invalid-feedback">형식을 확인해 주세요 (-----@---.---)</div>
+            <div class="valid-feedback">사용가능 합니다</div>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
           <div class="col">
-            <input type="text" id="phone_v" placeholder="전화번호" class="form-control">
+            <input type="text" id="phone_v" placeholder="전화번호 (-를 사용해 주세요)" class="form-control">
+            <div class="invalid-feedback">형식을 확인해 주세요 (0xx-xxxx-xxxx)</div>
+            <div class="valid-feedback">사용가능 합니다</div>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
+        <div class="row mb-3">
+          <div class="col pe-2">
             <input type="text" id="position_v" placeholder="분야" class="form-control">
+            <div class="invalid-feedback">필수정보 입니다</div>
+            <div class="valid-feedback">사용가능 합니다</div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col">
+          <div class="col ps-2">
             <input type="text" id="major_v" placeholder="전공" class="form-control">
+            <div class="invalid-feedback">필수정보 입니다</div>
+            <div class="valid-feedback">사용가능 합니다</div>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
           <div class="col">
             <input type="text" id="join_year_v" placeholder="입사년도" class="form-control">
+            <div class="invalid-feedback">형식을 확인해 주세요 (xxxx)</div>
+            <div class="valid-feedback">사용가능 합니다</div>
           </div>
         </div>
-        <div class="row">
+        <div class="row mb-6">
           <div class="col">
-            <input type="textarea" id="descrip_v" placeholder="추가 사항 입력">
+            <div class="mb-3">
+              <textarea class="form-control" id="descrip_v" placeholder="추가 사항 입력 (선택)" rows="3"></textarea>
+            </div>
           </div>
         </div>
       </div>
-      <button onclick="confirm()">확인</button>
-      <button onclick="cancel()">취소</button>
+      <button class="btn btn-primary" onclick="confirm_btn()">확인</button>
+      <button class="btn btn-outline-danger" onclick="location.href = '/'">취소</button>
     </form>
   </div>
 
