--- a/Assignment2_2/view.html
+++ b/Assignment2_2/view.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./my.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="./js/view.js"></script>
+  <script src="./js/view.js" defer></script>
   <title>view page</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -18,9 +18,44 @@
       .then(response => response.text())
       .then(data => document.getElementById('header').innerHTML = data);
   </script>
+
+  <div id="container" class="d-flex justify-content-center my-3 mx-auto" style="max-width: 500px;">
+    <div class="mt-3">
+      <div class="row mb-3">
+        <span id="name_v" class="fs-5 fw-bold">직원이 선택되지 않았습니다.</span>
+      </div>
+
+      <div class="row mb-3">
+        <div id="email_v" class="col">이메일 들어갈 장소</div>
+      </div>
+
+      <div class="row mb-3">
+        <div id="phone_v" class="col">전화번호 들어갈 장소</div>
+      </div>
+
+      <div class="row mb-3">
+        <div id="position_v" class="col">분야 들어갈 장소</div>
+      </div>
+
+      <div class="row mb-3">
+        <div id="major_v" class="col">전공 들어갈 장소</div>
+      </div>
+
+      <div class="row mb-3">
+        <div id="join_year_v" class="col">입사년도 들어갈 장소</div>
+      </div>
+
+      <div class="row mb-6">
+        <div id="descrip_v" class="mb-3">상세 정보 들어갈 장소</div>
+      </div>
+      
+      <button class="btn btn-outline-primary" onclick="back()">목록</button>
+      <button class="btn btn-outline-secondary" onclick="editList()">수정</button>
+      <button class="btn btn-outline-danger" onclick="removeList()">삭제</button>
+    </div>
+  </div>
+    
   
-
-
 
 
   <div id="footer" class="mt-auto"></div>
