--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./Assignment2_2/my.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="./Assignment2_2/js/index_main.js"></script>
+  <script src="./Assignment2_2/js/index_main.js" defer></script>
   <title>index</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -36,7 +36,8 @@
       </li>
       <li class="nav-item me-3"><input type="text" class="form-control" id="serch_v"></li>
       <li class="nav-item me-1"><button class="btn btn-outline-secondary py-1 px-2 h-100 d-inline-block" onclick="searchShowList()">검색</button></li>
-      <li class="nav-item me-1"><button class="btn btn-outline-secondary py-1 px-2 h-100 d-inline-block" onclick="reset()">검색 초기화</button></li>
+      <li class="nav-item me-1"><button class="btn btn-outline-warning py-1 px-2 h-100 d-inline-block" onclick="reset()">검색 초기화</button></li>
+      <li class="nav-item me-1"><button class="btn btn-outline-danger py-1 px-2 h-100 d-inline-block" onclick="resetData()">데이터 초기화</button></li>
       <li class="nav-item me-1"><button class="btn btn-success py-1 px-2 h-100 d-inline-block" onclick="location.href = './Assignment2_2/add.html'">추가</button></li>
     </ul>
   </div>
@@ -47,10 +48,10 @@
         <th scope="col">#</th>
         <th scope="col">이름</th>
         <th scope="col">분야</th>
-        <th scope="col">이메일</th>
+        <th scope="col" class="email_hide">이메일</th>
         <th scope="col">전화번호</th>
-        <th scope="col">전공</th>
-        <th scope="col">입사 년도</th>
+        <th scope="col" class="major_hide">전공</th>
+        <th scope="col" class="year_hide">입사 년도</th>
       </tr>
     </thead>
     <tbody></tbody>
