--- a/main_page/index_back.html
+++ b/main_page/index_back.html
@@ -54,6 +54,17 @@
     </li>
   </ul>
 
+
+  <h1>Assignment4-1 (10주차)</h1>
+  <ul>
+    <li>
+      <a href="/Assignment4_1/my_ajax.html">AJAX 테스트 페이지</a>
+    </li>
+    <li>
+      <a href="/my_data.json">JSON 파일 페이지</a>
+    </li>
+  </ul>
+
   
 </body>
 </html>
