--- a/Assignment4_1/my_ajax.html
+++ b/Assignment4_1/my_ajax.html
@@ -13,7 +13,7 @@
 
   <div id="hide">hide?</div>
 
-  <div id="hide2" onclick="hd2()">hide2?</div>
+  <div id="hide2" onclick="hd2()">바뀜</div>
 
   DI : <input type="text" id="num_i">
   NAME : <input type="text" id="name_i">
