--- a/main_page/index_back.html
+++ b/main_page/index_back.html
@@ -65,6 +65,13 @@
     </li>
   </ul>
 
+  <h1>Assignment4-2 (11주차)</h1>
+  <ul>
+    <li>
+      <a href="/Assignment4_2/my_ajax.html">AJAX 테스트 페이지</a>
+    </li>
+  </ul>
+
   
 </body>
 </html>
